--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,8 +96,8 @@ jobs:
             --org "${{ secrets.APIGEE_ORG }}" \
             --default-token || true
           # Use 'environments keystores aliases import'
-          apigeecli environments keystores aliases import \
-            --keystore "$KS_NAME" \
+          apigeecli keystores aliases import \
+            --name "$KS_NAME" \
             --org "${{ secrets.APIGEE_ORG }}" \
             --env "${{ env.APIGEE_ENV }}" \
             --file keystores_final.json \
