--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,11 +93,8 @@ jobs:
             -o ${{ secrets.APIGEE_ORG }} -e ${{ env.APIGEE_ENV }} --default-token || true
 
           # Import aliases (uses the file path from your finalized JSON)
-            apigeecli keystores aliases import \
-            --org "${{ secrets.APIGEE_ORG }}" \
-            --env "${{ env.APIGEE_ENV }}" \
-            -f keystores_final.json \
-            --default-token
+            apigeeeecli keystores [command] --help
+            
 
           # 6. Cleanup
           rm keystores_final.json *.bin
