--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,11 +83,15 @@ jobs:
             CLEAN_PWD=$(echo "$PWD_B64" | base64 -d)
 
             # 5. Import Alias into Apigee using apigeecli
-            # Format is set to 'pkcs12' for .p12/.pfx files
-            apigeecli keystores aliases import  \
-              --env ${{ env.APIGEE_ENV }} \
-              --org ${{ secrets.APIGEE_ORG }} \             
-              --default-token || true
+           apigeecli keystores aliases import \
+            --org "${{ secrets.APIGEE_ORG }}" \
+            --env "${{ env.APIGEE_ENV }}" \
+            --keystore "$KS_NAME" \
+            --alias "$ALIAS_NAME" \
+            --file "$LOCAL_FILENAME" \
+            --password "$CLEAN_PWD" \
+            --format pkcs12 \
+            --default-token || true
 
           done
 
