--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,15 @@ jobs:
       - name: Install apigeecli
         run: |
           curl -L https://raw.githubusercontent.com/apigee/apigeecli/main/downloadLatest.sh -o install_apigeecli.sh
-          chmod +x install_apigeecli.sh
-          ./install_apigeecli.sh
-          echo "$HOME/.apigeecli/bin" >> $GITHUB_PATH
-          apigeecli version
+          if [ -s install_apigeecli.sh ]; then
+            chmod +x install_apigeecli.sh
+            ./install_apigeecli.sh
+            echo "$HOME/.apigeecli/bin" >> $GITHUB_PATH
+            echo "✅ apigeecli installed successfully."
+          else
+            echo "❌ Error: apigeecli installer download failed."
+            exit 1
+          fi
 
 
       - name: Sync Keystores
