--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,49 +52,57 @@ jobs:
           fi
 
 
-      - name: Sync Keystores
+      - name: Sync Keystores and Aliases
         run: |
           KS_JSON="configs/${{ env.APIGEE_ENV }}/keystores/keystores.json"
-          KS_NAME=$(basename "$KS_JSON" .json)
+          TOKEN=$(gcloud auth print-access-token)
 
-          # 1. Create the Keystore container if it doesn't exist
-          apigeecli keystores create \
-            --name "$KS_NAME" \
-            --org "${{ secrets.APIGEE_ORG }}" \
-            --env "${{ env.APIGEE_ENV }}" \
-            --default-token || true
+          # 1. Loop through each Keystore in the JSON array
+          for ks_row in $(jq -r '.[] | @base64' "$KS_JSON"); do
+            _ks_jq() { echo "${ks_row}" | base64 -d | jq -r "${1}"; }
+            
+            KS_NAME=$(_ks_jq '.name')
+            echo "📦 Processing Keystore: $KS_NAME"
 
-          # 2. Iterate through the JSON array to decode secrets and import aliases
-          for row in $(jq -r '.[] | @base64' "$KS_JSON"); do
-            _jq() {
-              echo "${row}" | base64 -d | jq -r "${1}"
-            }
+            # Create Keystore container if it doesn't exist
+            apigeecli keystores create --name "$KS_NAME" \
+              -o ${{ secrets.APIGEE_ORG }} -e ${{ env.APIGEE_ENV }} --token $TOKEN || true
 
-            FILE_VAR_NAME=$(_jq '.file' | tr -d '$')
-            PWD_VAR_NAME=$(_jq '.password' | tr -d '$')
-            ALIAS_NAME=$(_jq '.alias')
+            # 2. Loop through Aliases within this Keystore
+            for alias_row in $(_ks_jq '.aliases[] | @base64'); do
+              _alias_jq() { echo "${alias_row}" | base64 -d | jq -r "${1}"; }
 
-            echo "🔑 Processing Alias: $ALIAS_NAME"
+              ALIAS_NAME=$(_alias_jq '.alias')
+              FILE_VAR_NAME=$(_alias_jq '.file' | tr -d '$')
+              PWD_VAR_NAME=$(_alias_jq '.password' | tr -d '$')
 
-            # 3. Retrieve and decode PKCS12 file from GSM
-            FILE_B64=$(gcloud secrets versions access latest --secret="$FILE_VAR_NAME")
-            LOCAL_FILENAME="${ALIAS_NAME}.p12"
-            echo "$FILE_B64" | base64 -d > "$LOCAL_FILENAME"
+              echo "  🔑 Processing Alias: $ALIAS_NAME"
 
-            # 4. Retrieve and decode password from GSM
-            PWD_B64=$(gcloud secrets versions access latest --secret="$PWD_VAR_NAME")
-            CLEAN_PWD=$(echo "$PWD_B64" | base64 -d)
+              # 3. Retrieve and decode PKCS12 file from GSM
+              FILE_B64=$(gcloud secrets versions access latest --secret="$FILE_VAR_NAME")
+              LOCAL_FILENAME="${ALIAS_NAME}.p12"
+              echo "$FILE_B64" | base64 -d > "$LOCAL_FILENAME"
 
-            # 5. Import alias using latest apigeecli
-            apigeecli keystores import \
-            --org "$ORG" \
-            --env "$ENV" \
-            -f keystores/keystores.json \
-            --default-token
-                   
+              # 4. Retrieve and decode password from GSM
+              PWD_B64=$(gcloud secrets versions access latest --secret="$PWD_VAR_NAME")
+              CLEAN_PWD=$(echo "$PWD_B64" | base64 -d)
 
-          # 6. Cleanup sensitive files
-          rm -f *.p12
+              # 5. Import alias using apigeecli 2025 hierarchy
+              # Note: 'import' command usually handles folders; for specific files, 'aliases create' is preferred.
+              apigeecli keystores aliases create \
+                --org ${{ secrets.APIGEE_ORG }} \
+                --env ${{ env.APIGEE_ENV }} \
+                --keystore "$KS_NAME" \
+                --name "$ALIAS_NAME" \
+                --format pkcs12 \
+                --p12 "$LOCAL_FILENAME" \
+                --password "$CLEAN_PWD" \
+                --token "$TOKEN"
+
+              # Cleanup binary after each import
+              rm -f "$LOCAL_FILENAME"
+            done
+          done
 
       - name: Deploy KVMs
         run: |
