--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,7 +92,7 @@ jobs:
               apigeecli keystores aliases create \
                 --org ${{ secrets.APIGEE_ORG }} \
                 --env ${{ env.APIGEE_ENV }} \      
-                --token "$TOKEN"
+                --default-token
 
               # Cleanup binary after each import
               rm -f "$LOCAL_FILENAME"
