--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -122,14 +122,14 @@ jobs:
 
       - name: Deploy Modified API Proxies
         run: |
-          MODIFIED_PROXIES=$(git diff --name-only HEAD^ HEAD | grep "^proxies/${{ env.APIGEE_ENV }}/" | cut -d/ -f3 | sort -u || true)
+          MODIFIED_PROXIES=$(git diff --name-only HEAD^ HEAD | grep "^proxies/" | cut -d/ -f2 | sort -u || true)
           if [ -n "$MODIFIED_PROXIES" ]; then
             for PROXY_NAME in $MODIFIED_PROXIES; do
-              if [ -d "proxies/${{ env.APIGEE_ENV }}/$PROXY_NAME/apiproxy" ]; then
+              if [ -d "proxies/$PROXY_NAME/apiproxy" ]; then
                 echo "🚀 Creating and Deploying Proxy: $PROXY_NAME"
                 apigeecli apis create bundle \
                   --name "$PROXY_NAME" \
-                  --proxy-folder "proxies/${{ env.APIGEE_ENV }}/$PROXY_NAME/apiproxy" \
+                  --proxy-folder "proxies/$PROXY_NAME/apiproxy" \
                   --org "${{ secrets.APIGEE_ORG }}" \
                   --default-token
                 apigeecli apis deploy \
