--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Apigee X CI/CD for KVMs, Target Servers, Shared flows and API Proxies
 on:
   push:
     branches:
-      - main
+      - test
   workflow_dispatch:
 
 jobs:
@@ -30,7 +30,7 @@ jobs:
           if [[ "${{ github.ref_name }}" == "dev" ]]; then
             echo "APIGEE_ENV=dev" >> $GITHUB_ENV
           elif [[ "${{ github.ref_name }}" == "test" ]]; then
-            echo "APIGEE_ENV=test" >> $GITHUB_ENV
+            echo "APIGEE_ENV=eval" >> $GITHUB_ENV
           elif [[ "${{ github.ref_name }}" == "main" ]]; then
             echo "APIGEE_ENV=eval" >> $GITHUB_ENV
           else
